Vulkan Overlay is blinking
Hi. I'm not sure it the right place but i will give it a try.
i'm trying porting the Vulkan overlay to windows to show performance overlay on some games. so far it looking good, but when i tried it on Wolfenstein 2 it's start to flicker once the game enter the Game menu (see attach video)
it's look like a sync issue with the present queue and the graphics queue.